# Infection-rate-prediction-program-in-C

./: CMakeLists.txt  Constants.h  Meeting.c  Meeting.h  Person.c  Person.h  README.md  SpreaderDetector.c  SpreaderDetector.h  main.c  meeting  midterm.txt  people
